--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -6,8 +6,10 @@
       {{ form.hidden_tag() }}
       <table>
           <tr>
+              <td>Blog Title:</td>
+              <td>{{ form.title(cols=10, rows=10) }}</td>
               <td>Blog Content:</td>
-              <td>{{ form.post(size=30, maxLength=3000) }}</td>
+              <td>{{ form.post(cols=50, rows=10) }}</td>
               <td>
               {% for error in form.post.errors %}
               <span style="color: red;">[{{ error }}]</span><br>
