added search bar on top, styled amongst other tweaks and works in progress

--- a/blog/static/css/main.css
+++ b/blog/static/css/main.css
@@ -24,3 +24,11 @@
       .row.content {height:auto;}
     }
 
+.main-content {
+    padding-top: 20px;
+}
+
+.search-box {
+    width: 300px;
+    padding-top: 7px;
+}
