--- a/blog/static/css/gallery.css
+++ b/blog/static/css/gallery.css
@@ -10,3 +10,15 @@
 #gallery ul li img {
   cursor: pointer;
 }
+
+.controls{
+    width:50px;
+    display:block;
+    font-size:11px;
+    padding-top:8px;
+    font-weight:bold;
+}
+.next {
+    float:right;
+    text-align:right;
+}
