--- a/blog/templates/gallery.html
+++ b/blog/templates/gallery.html
@@ -26,10 +26,11 @@
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 </div>
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
+
+    <!--<link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">-->
+    <!--<link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">-->
+    <!--<script src="http://code.jquery.com/jquery-latest.js"></script>-->
+    <!--<script src="/static/js/bootstrap.min.js"></script>-->
     <script src="/static/js/gallery.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/css/gallery.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
