--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -3,25 +3,39 @@
 
 {% block content %}
 
-  <h1>Log In</h1>
-  <form action="" method="post" name="login">
-      {{ form.hidden_tag() }}
-      <p>
-          Username:<br>
-          {{ form.username(size=20) }}<br>
-          {% for error in form.username.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-          {% endfor %}<br>
-      </p>
-      <p>
-          Password:<br>
-          {{ form.password(size=10) }}<br>
-          {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-          {% endfor %}<br>
-      </p>
-      <p><input type="submit" value="Log In"></p>
-  </form>
+<div class="container">
+    <div class="row vertical-offset-20">
+    	<div class="col-md-4">
+    		<div class="panel panel-default">
+			  	<div class="panel-heading">
+			    	<h3 class="panel-title">Log In</h3>
+                </div>
+                <div class="panel-body">
+                    <form action="" method="post" name="login" role="form">
+                        {{ form.hidden_tag() }}
+                    <fieldset>
+                  <p>
+                      Username:<br>
+                      {{ form.username(size=20, class_="form-group") }}<br>
+                      {% for error in form.username.errors %}
+                        <span style="color: red;">[{{ error }}]</span>
+                      {% endfor %}<br>
+                  </p>
+                  <p>
+                      Password:<br>
+                      {{ form.password(size=10, class_="form-group") }}<br>
+                      {% for error in form.password.errors %}
+                        <span style="color: red;">[{{ error }}]</span>
+                      {% endfor %}<br>
+                  </p>
+                  <p><input class="btn btn-lg btn-success btn-block" type="submit" value="Log In"></p>
+                    </fieldset>
+                    </form>
+                    </div>
+			</div>
+		</div>
+	</div>
+</div>
 
 {% endblock %}
 
