--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -2,11 +2,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <table>
-      <tr valign="top">
-          <td><img src="{{ user.avatar(128) }}"></td>
-      </tr>
-  </table>
-    {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-  <hr>
+
+    {% if user.about_me %}
+    <p>
+        {{ user.about_me }}
+    </p>
+    {% endif %}
+
 {% endblock %}
