--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -31,6 +31,7 @@
           <li><a href="/gallery">Gallery</a></li>
           {% if current_user.is_authenticated %}
           <li><a href="/post"> Add Post </a></li>
+          <li><a href="/edit"> Edit Profile </a></li>
           {% endif %}
           <li>
               <div class="search-box">
