--- a/blog/templates/gallery.html
+++ b/blog/templates/gallery.html
@@ -4,16 +4,56 @@
 <div id="gallery">
 <div class="container-fluid">
    <ul class="row">
-       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4"><img src= "/static/Pictures/Jerry1.jpg" width="100"/></li>
-       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4"><img src= "/static/Pictures/Jerry2.jpg" width="100"/></li>
-       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4"><img src= "/static/Pictures/party_go.jpg" width="100"/></li>
-       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4"><img src= "/static/Pictures/party.jpg" width="100"/></li>
-       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4"><img src= "/static/Pictures/wayne1.jpg" width="100"/></li>
-       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4"><img src= "/static/Pictures/wayne2.jpg" width="100"/></li>
-       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4"><img src= "/static/Pictures/wayne3.jpg" width="100"/></li>
-       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4"><img src= "/static/Pictures/wayne4.jpg" width="100"/></li>
-       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4"><img src= "/static/Pictures/wayne6.JPG" width="100"/></li>
-       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4"><img src= "/static/Pictures/RI_party.JPG" width="100"/></li>
+       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+           <a href="#" class="thumbnail">
+               <img src= "/static/Pictures/Jerry1.jpg" width="100"/>
+           </a>
+       </li>
+       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+           <a href="#" class="thumbnail">
+               <img src= "/static/Pictures/Jerry2.jpg" width="100"/>
+           </a>
+       </li>
+       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+           <a href="#" class="thumbnail">
+               <img src= "/static/Pictures/party_go.jpg" width="100"/>
+           </a>
+       </li>
+       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+           <a href="#" class="thumbnail">
+               <img src= "/static/Pictures/party.jpg" width="100"/>
+           </a>
+       </li>
+       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+           <a href="#" class="thumbnail">
+            <img src= "/static/Pictures/wayne1.jpg" width="100"/>
+           </a>
+       </li>
+       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+           <a href="#" class="thumbnail">
+               <img src= "/static/Pictures/wayne2.jpg" width="100"/>
+           </a>
+       </li>
+       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+           <a href="#" class="thumbnail">
+               <img src= "/static/Pictures/wayne3.jpg" width="100"/>
+           </a>
+       </li>
+       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+           <a href="#" class="thumbnail">
+               <img src= "/static/Pictures/wayne4.jpg" width="100"/>
+           </a>
+       </li>
+       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+           <a href="#" class="thumbnail">
+               <img src= "/static/Pictures/wayne6.JPG" width="100"/>
+           </a>
+       </li>
+       <li class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+           <a href="#" class="thumbnail">
+               <img src= "/static/Pictures/RI_party.JPG" width="100"/>
+           </a>
+       </li>
    </ul>
 </div>
 
