--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -8,16 +8,19 @@
                 <div class="panel-body">
                     <h1>{{ post.title }} </h1>
                     <p>
-                        <br>{{ post.body }}</br>
+                        <br>{{ post.body }}
                     </p>
                     <div>
                         <span class="badge"> Posted on {{ post.timestamp }} </span>
                     </div>
+                    <li><a href="#">Edit Post</a></li>
+                    <li><a href="#">Delete Post</a></li>
                 </div>
             </div>
         {% endfor %}
     </div>
 </div>
+
  <br>
  <br>
 <nav aria-label="...">
