--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -16,17 +16,17 @@
                     <fieldset>
                   <p>
                       Username:<br>
-                      {{ form.username(size=20, class_="form-group") }}<br>
+                      {{ form.username(size=20, class_="form-control") }}<br>
                       {% for error in form.username.errors %}
                         <span style="color: red;">[{{ error }}]</span>
-                      {% endfor %}<br>
+                      {% endfor %}
                   </p>
                   <p>
                       Password:<br>
-                      {{ form.password(size=10, class_="form-group") }}<br>
+                      {{ form.password(size=10, class_="form-control") }}<br>
                       {% for error in form.password.errors %}
                         <span style="color: red;">[{{ error }}]</span>
-                      {% endfor %}<br>
+                      {% endfor %}
                   </p>
                   <p><input class="btn btn-lg btn-success btn-block" type="submit" value="Log In"></p>
                     </fieldset>
