added contact page - allows users to submit messages with email

--- a/blog/static/css/main.css
+++ b/blog/static/css/main.css
@@ -5,8 +5,8 @@
       margin-bottom: 0;
       border-radius: 0;
     }
-/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-    .row.content {height: 950px}
+/* Set height of the grid*/
+    .row.content {height: 1000px}
 
 /* Set gray background color and 100% height */
     .sidenav {
