--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -27,7 +27,7 @@
         <li class="active"><a href="/index">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="/contact">Contact</a></li>
           <li><a href="/gallery">Gallery</a></li>
           {% if current_user.is_authenticated %}
           <li><a href="/post"> Add Post </a></li>
