--- a/blog/templates/contact.html
+++ b/blog/templates/contact.html
@@ -3,34 +3,34 @@
 
 {% block content %}
 
-<h2>Contact</h2>
-
 {% if success %}
     <p>Thank you for your message. We'll get back to you shortly.</p>
 {% else %}
-    {% for message in form.name.errors %}
-      <div class="flash">{{ message }}</div>
-    {% endfor %}
 
-    {% for message in form.email.errors %}
-      <div class="flash">{{ message }}</div>
-    {% endfor %}
+{% macro render_error(errors) -%}
+    {% if errors %}
+        <div class="alert alert-danger" role="alert">
+        {% for message in errors %}
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            <span class="sr-only">Error:</span>
+            <span class="flash">{{ message }}</span><br/>
+        {% endfor %}
+        </div>
+    {% endif %}
+{%- endmacro %}
 
-    {% for message in form.subject.errors %}
-      <div class="flash">{{ message }}</div>
-    {% endfor %}
+{{ render_error(form.name.errors) }}
+{{ render_error(form.email.errors) }}
+{{ render_error(form.subject.errors) }}
+{{ render_error(form.message.errors) }}
 
-    {% for message in form.message.errors %}
-      <div class="flash">{{ message }}</div>
-    {% endfor %}
 
-<div class="container">
-<div class="col-md-5">
+<div class="container-fluid">
+<div class="col-md-12">
+    <h2>Contact</h2>
     <div class="form-area">
-        <form role="form">
         <br style="clear:both">
-
-          <form action="{{ url_for('contact') }}" method=post>
+        <form action="{{ url_for('contact') }}" method=post>
             {{ form.hidden_tag() }}
             <div class="form-group">
                 {{ form.name(class="form-control", placeholder="Name") }}
@@ -42,28 +42,13 @@
                 {{ form.subject(class="form-control", placeholder="Subject") }}
             </div>
             <div class="form-group">
-                {{ form.message(class="form-control", placeholder="Message") }}
+                {{ form.message(rows='5',class="form-control", placeholder="Message") }}
             </div>
-            {{ form.submit (class="btn btn-primary pull-right")}}
-          </form>
+            {{ form.submit(class="btn btn-lg btn-success pull-right") }}
+        </form>
+    </div>
+</div>
+</div>
 
 {% endif %}
 {% endblock %}
-
-  <!--<form action="{{ url_for('contact') }}" method=post>-->
-    <!--{{ form.hidden_tag() }}-->
-
-    <!--{{ form.name.label }}-->
-    <!--{{ form.name }}-->
-
-    <!--{{ form.email.label }}-->
-    <!--{{ form.email }}-->
-
-    <!--{{ form.subject.label }}-->
-    <!--{{ form.subject }}-->
-
-    <!--{{ form.message.label }}-->
-    <!--{{ form.message }}-->
-
-    <!--{{ form.submit }}-->
-  <!--</form>-->
