--- a/blog/templates/post.html
+++ b/blog/templates/post.html
@@ -6,7 +6,7 @@
 <form action="" method="post" name="post">
     {{ form.hidden_tag() }}
     <div class="form-group">
-        {{ form.title.label }}
+        <h1> Title </h1>
         {{ form.title(cols=10, rows=10, class="form-control", placeholder="Enter a subject for your post...") }}
     </div>
     {{ form.post }}
