styled post blog entry button

--- a/blog/templates/post.html
+++ b/blog/templates/post.html
@@ -10,7 +10,7 @@
         {{ form.title(cols=10, rows=10, class="form-control", placeholder="Enter a subject for your post...") }}
     </div>
     {{ form.post }}
-<input type="submit" value="Post!">
+<input type="submit" value="Post blog entry!" class="btn btn-lg btn-success pull-right">
   </form>
 
 <link href="/static/wysiwyg/summernote.css" rel="stylesheet">
